# Project2

project2/: CMakeLists.txt  run_cmake.sh
project2/app/: CMakeLists.txt  main.cpp
project2/resources/: junior_logo.txt  senior_logo.txt
project2/src/: CMakeLists.txt  developer.cpp  developer.hpp
project2/tests/: CMakeLists.txt  developer_test.cpp
